--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # production
 /build
 
+# firebase hosting
+.firebaserc
+firebase-debug.log
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +25,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase.json
+firestore.indexes.json
+firestore.rules
+.firebase/hosting.YnVpbGQ.cache
